core: fix compiler warnings -Werror=shadow by trivial renaming of variables

https://bugzilla.gnome.org/show_bug.cgi?id=710497

Signed-off-by: Thomas Haller <thaller@redhat.com>